--- a/index.html
+++ b/index.html
@@ -8,17 +8,10 @@
 </head>
 
 <body>
-  <nav></nav>
-
-  <header></header>
-
-  <article>
-    <header></header>
-    <section></section>
-    <footer></footer>
+  
+  <article id="container">
+    <section id="audrey">Feed me, Seymour</section>
   </article>
-
-  <footer></footer>
 
   <script src="main.js"></script>
 </body>
